// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Address UU5.Bricks.Address docKit example 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
>
   Stanley Stalion Sunny Street 42 Savannah States 
</address>
`;

exports[`UU5.Bricks.Address checkGrammar=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address checkGrammar=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address checkHighlight=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address checkHighlight=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address checkSpaces=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address checkSpaces=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address className="my-classname" 1`] = `
<address
  className="uu5-bricks-address my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address className="test-classname" 1`] = `
<address
  className="uu5-bricks-address test-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address content="This is Content from ContentMixin" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
>
  This is Content from ContentMixin
</address>
`;

exports[`UU5.Bricks.Address content=12345 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
>
  12345
</address>
`;

exports[`UU5.Bricks.Address controlled=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address controlled=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address default props 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address disabled=false 1`] = `
<address
  className="uu5-bricks-address"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address disabled=false 3`] = `
<address
  className="uu5-bricks-address"
  disabled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address disabled=true 1`] = `
<address
  className="uu5-bricks-address"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address disabled=true 3`] = `
<address
  className="uu5-bricks-address"
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address dynamic=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address dynamic=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address fullTextSearchPriority=0 1`] = `
<address
  className="uu5-bricks-address uu-fulltextsearch-0"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address hidden=false 1`] = `
<address
  className="uu5-bricks-address"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address hidden=false 3`] = `
<address
  className="uu5-bricks-address"
  hidden={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address hidden=true 1`] = `
<address
  className="uu5-bricks-address"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address hidden=true 3`] = `
<address
  className="uu5-bricks-address"
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address id="myId" 1`] = `
<address
  className="uu5-bricks-address"
  id="myId"
/>
`;

exports[`UU5.Bricks.Address id="test-id" 1`] = `
<address
  className="uu5-bricks-address"
  id="test-id"
/>
`;

exports[`UU5.Bricks.Address ignoreHTML=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address ignoreHTML=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address mainAttrs=undefined 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address name="myName" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address nestingLevel="box" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address nestingLevel="inline" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address noIndex=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address noIndex=true 1`] = `
<address
  className="uu5-bricks-address uu-fulltextsearch-0 uu5-noindex"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address noPrint=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address noPrint=true 1`] = `
<address
  className="uu5-bricks-address uug-1ak6bum"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address selected=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address selected=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address style="padding:8px; borderRadius: 2px" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Address style={"backgroundColor":"red","color":"blue"} 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Address style={"margin":8} 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.Address textCorrector=false 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address textCorrector=true 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Address tooltip="My Tooltip" 1`] = `
<address
  className="uu5-bricks-address"
  id="uuID"
/>
`;
